CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(ccel)
SET(CMAKE_CXX_STANDARD 14)
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/include")
aux_source_directory("${PROJECT_SOURCE_DIR}/src" CCEL_SRC)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/bin")
SET(LIBRARY_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/lib")
ADD_SUBDIRECTORY("${PROJECT_SOURCE_DIR}/unit_test")
ADD_SUBDIRECTORY("${PROJECT_SOURCE_DIR}/src")
