CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(ccel_lib)
SET(CMAKE_CXX_STANDARD 14)
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/include")
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
SET(LIBRARY_OUTPUT_PATH "${CMAKE_BINARY_DIR}/lib")
SET(CMAKE_CXX_FLAGS "-Wall ${CMAKE_CXX_FLAGS}")
ADD_LIBRARY(ccel_canbus "ccel/impl/impl_canbus.cc")
ADD_LIBRARY(ccel_key "ccel/impl/impl_udev.cc")
TARGET_LINK_LIBRARIES(ccel_key Boost::system Boost::thread Boost::chrono)
TARGET_LINK_LIBRARIES(ccel_canbus Boost::system Boost::thread Boost::chrono)
