CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(ccel_unit_test)
SET(CMAKE_CXX_STANDARD 14)
set(Boost_USE_STATIC_LIBS ON)
set(Boost_USE_STATIC_RUNTIME ON)
INCLUDE_DIRECTORIES("${Boost_INCLUDE_DIR}")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}")
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/unit_test)
ADD_EXECUTABLE(handler_pool_test handler_pool_test.cc)
ADD_EXECUTABLE(virtual_keyboard_test virtual_keyboard_test.cc)
ADD_EXECUTABLE(canbus_handler_test canbus_handler_test.cc)
TARGET_LINK_LIBRARIES(virtual_keyboard_test ccel_key)
TARGET_LINK_LIBRARIES(handler_pool_test Boost::system Boost::thread)
TARGET_LINK_LIBRARIES(canbus_handler_test ccel_canbus)
